--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,22 +6,26 @@
         <meta name="theme-color" content="#000000" />
         <meta name="description" content="A product of emergent.sh" />
         <title>Faqih Abqory | Portfoli  o</title>
+        <link rel="icon" href="/assets/icons/Logo.jpg" />
 
         <meta name="description" content="Portofolio Ahmad Faqih Abqory, seorang Full Stack Web Developer spesialis React & Laravel. Lihat proyek dan sertifikasi terbaru." />
         <meta name="keywords" content="Ahmad Faqih Abqory, Web Developer, React Developer, Laravel, Portfolio, Frontend Engineer" />
         <meta name="author" content="Ahmad Faqih Abqory" />
+        <meta name="author" content="Ahmad Faqih" />
+        <meta name="author" content="Faqih Abqory" />
+        <meta name="author" content="qoy" />
 
         <meta property="og:type" content="website" />
-        <meta property="og:url" content="https://faqihabqory.my.id/" />
+        <meta property="og:url" content="https://ahmadfaqihabqory.my.id/" />
         <meta property="og:title" content="Ahmad Faqih Abqory - Full Stack Developer" />
         <meta property="og:description" content="Portofolio Ahmad Faqih Abqory. Spesialis React & Laravel." />
-        <meta property="og:image" content="https://faqihabqory.my.id/assets/images/profile/abqory.png" />
+        <meta property="og:image" content="https://ahmadfaqihabqory.my.id/assets/images/profile/abqory.png" />
 
         <meta property="twitter:card" content="summary_large_image" />
-        <meta property="twitter:url" content="https://faqihabqory.my.id/" />
+        <meta property="twitter:url" content="https://ahmadfaqihabqory.my.id/" />
         <meta property="twitter:title" content="Ahmad Faqih Abqory - Full Stack Developer" />
         <meta property="twitter:description" content="Portofolio Ahmad Faqih Abqory. Spesialis React & Laravel." />
-        <meta property="twitter:image" content="https://faqihabqory.my.id/assets/images/profile/abqory.png" />
+        <meta property="twitter:image" content="https://ahmadfaqihabqory.my.id/assets/images/profile/abqory.png" />
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
